@@ -1,1 +1,2 @@
 DIST ediff-1.82-pkg.tar.gz 321701 SHA256 d0a386c741dceb35b304141dc9f64b625ce679e4c798c1a7a266ce82e1d25ad3 SHA512 80909fec536706f38afbc1bc1038114d7606db8c46bf939b7fff6ea6e2f89535ab044ee770590356bfe25a5ed0dc0c52533410343c050a1f4c928e3180f016a9 WHIRLPOOL c16498c54a9478a6bf94b03bd2386b784e9a57433172a00abd7c99aaa5183665100d17bb4c03e56fda656c760903517a05fab617774e8c660d0d5ad195317aec
+DIST ediff-1.84-pkg.tar.gz 321835 SHA256 ba8b7f25cbce82fcb9301836f69b965b278ca6d75b723b34d3a25b6f16d986b0 SHA512 e8e511c3cc6b3541e4c17d140a65264e7c9aebcc859ceb42cf5bdc0feefbb94a8a97b7e1c9a36a149fe9fd416e5618dd78a4e0bce1d31e19ab955e64540f1fc3 WHIRLPOOL 194af5594b658db66a0b8ad0e0c64163d4e96ec1f9d0150b8536f032d2bccd4b3fe7334a8f1d2b57a499389908d15b34096fd88e6be621beef1238b77cb07f40
